# ai-report-generator

./: .env.template  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md
sample_data/: financial_data.xlsx  hr_metrics.csv  marketing_data.json  sales_data.csv
scripts/: batch_reports.py  demo.py  generate_sample_data.py
src/: app.py  config.py  exceptions.py  models.py
src/analysis/: detector.py  profiler.py  statistics.py
src/charts/: encoders.py  generator.py  palette.py
src/ingest/: csv_loader.py  db_loader.py  excel_loader.py  json_loader.py  loader.py
src/narrative/: templates.py  writer.py
src/pipeline/: processor.py
src/renderer/: html_renderer.py  pdf_renderer.py
src/services/: __init__.py  ai.py  database.py
src/storage/: report_store.py
tests/: conftest.py  test_analysis.py  test_api.py  test_charts.py  test_loaders.py  test_narrative.py  test_pipeline.py  test_renderer.py
