[project]
name = "ai-report-generator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "openai>=1.60.0",
    "jinja2>=3.1.5",
    "pandas>=2.2.0",
    "openpyxl>=3.1.5",
    "matplotlib>=3.10.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
pdf = ["weasyprint>=68.1"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "faker>=33.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
